Fixed poster spacing

--- a/src/Header.css
+++ b/src/Header.css
@@ -74,3 +74,7 @@
 .header__right {
   display: flex;
 }
+.header__info > h4{
+  padding-left: 15px;
+
+}
